# bitmap

./: .gitignore  BUILD_GUIDE.md  LICENSE  MANIFEST.in  QUICK_REFERENCE.md  README.md  example.py  index.html  main.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
bitmap/: __init__.py  core.py  storage.py
src/: __init__.py  core.py  image_processing.py  robot_interface.py  storage.py  vision_algorithms.py
storage/robot_fr_001/: events.jsonl
storage/robot_fr_001/arrays/: vision_frame_20260417T193947Z_f713035c.npy
storage/robot_fr_001/metadata/: vision_frame_20260417T193947Z_f713035c.json
storage/robot_fr_001/state/: last_command.json
tests/: __init__.py  test_bitmap_core.py  test_image_processing.py  test_storage.py  test_vision_algorithms.py
