[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitmap-robot-vision"
version = "0.1.1"
description = "Robot vision with bitmap processing, per-robot internal storage, and French status output"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Joshua Fitzgerald", email = "your.email@example.com" }
]
keywords = ["bitmap", "robot", "vision", "image-processing", "raw-camera", "computer-vision"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "rawpy>=0.17.0",
  "pillow>=9.0.0",
  "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools]
packages = ["bitmap", "src", "tests"]
